8315130: java.lang.IllegalAccessError when processing classlist to create CDS archive

Reviewed-by: iklam
Backport-of: 46a12e781edcbe9da7bd39eb9e101fc680053cef